# cmake-and-gtest-skeleton

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md
include/: pocket.hxx
src/: CMakeLists.txt  pocket.cpp
test/: CMakeLists.txt  main.cpp  pass_and_fail_test.cpp
